--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -4,4 +4,12 @@
   font-size: 16px;
   line-height: 1.12; 
   color: #FFFFFF;
+  margin: 0;
 }
+
+@media screen and (max-width: 650px){
+  .footer__copyright {
+    font-size: 14px;
+    line-height: 1;
+  }
+  }
