--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -5,18 +5,21 @@
   line-height: 1.12; 
   color: #FFFFFF;
   margin-right: 18px;
+  text-decoration: none;
 }
 
 .footer__link:hover {
   cursor: pointer;
+  opacity: 0.3;
+  transition: opacity 1s ease-out;
 }
 
-@media screen and (max-width: 768px){
+@media screen and (max-width: 705px){
 .footer__link {
   margin-bottom: 32px;
+  margin-right: 0;
+  font-size: 24px;
+  line-height: 1;
+  display: inline-block;
 }
-
-@media screen and (min-width: 768px){
-.footer__link {
-  margin-right: 18px;
 }
