--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -1,9 +1,13 @@
 .footer__links {
   display: flex;
   align-items: center;
+  justify-content: space-between;
+  list-style: none;
+  padding: 0;
+  margin: 0;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 705px) {
 .footer__links {
     flex-direction: column;
     align-items: flex-start;
