--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -7,27 +7,31 @@
   justify-content: space-between;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 705px) {
   .footer {
-    margin: 64px auto 24px 16px;
-    flex-direction: column;       
+    margin:  0 auto 0 16px;
+    flex-direction: column;
+    min-height: 310px;      
 }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1024px) {
-.footer {
-  margin: 88px 24px 24px;  
+@media screen and (min-width: 650px) and (max-width: 705px) {
+  .footer {
+    margin:  0 auto 0 24px;     
 }
 }
 
-@media screen and (min-width: 1024px) and (max-width: 1280px) {
-.footer {
-  margin: 92px 48px 24px; 
+@media screen and (min-width: 705px) and (max-width: 900px) {
+  .footer {
+    width: calc(100% - 24px*2);
+    margin:  0 24px;  
 }
 }
 
-@media screen and (min-width: 1280px) {
-.footer {
-  margin: 92px 0 24px;
-}   
+@media screen and (min-width: 900px) {
+  .footer {
+    width: calc(100% - 48px*2);
+    max-width: 1184px;
+    margin: 0 48px; 
+}
 }
