--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -3,19 +3,21 @@
 
 .header {
   display: flex;
-  margin: 0;
-  max-height: 52px;
+  margin: 0 auto 48px;
+  width: calc(100% - 48px*2);
+  max-width: 1184px;
+  align-items: flex-end;
 }
 
-@media screen and (max-width: 425px) {
+@media screen and (max-width: 650px) {
   .header {
-    margin: 16px 16px 48px;
+    width: calc(100% - 16px*2);
 }
 }
 
-@media screen and (min-width: 425px) {
+@media screen and (min-width: 650px) and (max-width: 900px) {
   .header {
-   margin: 28px 24px 48px;
+    width: calc(100% - 24px*2);
 }
 }
 
