--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -5,6 +5,17 @@
     font-size: 16px;
     line-height: 1.62;
     color: #FFFFFF;
-    margin: 0 0 38px;
-    padding: 0;
+    margin: 0 0 32px;
+  }
+
+  @media screen and (min-width: 900px) {
+    .intro__text {
+      width: 690px;
+    }
+  }
+
+  @media screen and (min-width: 900px) and (min-width: 1280px){
+    .intro__text {
+      margin-bottom: 38px;
+    }
   }
