--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -6,11 +6,19 @@
     font-size: 54px;
     line-height: 107%;
     color: #FFFFFF;
-    margin: 0 0 40px;
+    margin-bottom: 40px;
+    margin-top: 0;
   }
 
-  @media screen and (max-width: 768px) {
+  @media screen and (max-width: 650px) {
     .intro__title {
       font-size: 32px;
       line-height: 109%;
     }
+  }
+
+  @media screen and (min-width: 900px) {
+    .intro__title {
+      width: 690px;
+    }
+  }
