--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -4,24 +4,26 @@
 @import url(./__title/intro__title.css);
 
 .intro { 
-    max-width: 690px;
+  display: flex;
+  align-items: flex-start;
+  flex-direction: column;
+  width: calc(100% - 48px*2);
+  margin: 0 auto 92px;
+  max-width: 984px;
   }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 650px) {
     .intro {
-      margin: 64px 16px;
+      width: calc(100% - 16px*2);
+      margin: 0 auto 64px;
     } 
 }
 
-@media screen and (min-width: 768px) and (max-width: 1024px) {
+@media screen and (min-width: 650px) and (max-width: 900px) {
     .intro {
-        margin: 88px 24px;
+      width: calc(100% - 24px*2);
+        margin: 0 auto 88px;
       }
     }
 
-@media screen and (min-width: 1024px) {
-    .intro {
-    margin: 92px auto 92px 48px;
-}
-}
 
