--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,19 +1,7 @@
 .lead__image {
-    height: 62.5vw;
-    margin-bottom: 8px;
-    object-fit: contain;
-}
-
-@media screen and (min-width: 1024px) and (max-width: 1280px) {
-.lead__image {
-    height: auto;
-    margin-bottom: 8px;
-    object-fit: contain;
-  }
-}
-
-@media screen and (min-width: 1024px) {
-    .lead__image {
-      width: 100%;
-    }
+    width: 100%;
+    padding-top: 62.5%;
+    background-image: url(../../../images/lead-polka.jpg);
+    background-size: 100% 100%;
+    
 }
