--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,5 +1,5 @@
 .lead__title {
-    width: 90%;
+    /*width: 90%;*/
     max-width: 720px;
     height: auto;
     font-style: normal;
@@ -8,11 +8,12 @@
     line-height: 1.04;
     text-align: center;
     color: #FFFFFF;
-    margin: 0;
+    margin: 0 auto 32px;
   }
 
-  @media screen and (max-width: 768px) {
+  @media screen and (max-width: 650px) {
     .lead__title {
+      margin-bottom: 16px;
       font-size: 40px;
       line-height: 1.1;
     }
