--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -4,20 +4,21 @@
 @import url(./__title/lead__title.css);
 
 .lead {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin: 0
+  margin: 0 auto 92px;
+  width: calc(100% - 48px*2);
+  max-width: 984px;
   }
 
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 650px) and (max-width: 900px) {
   .lead {
-  margin: 0;
+    width: 100%;
+    margin-bottom: 88px;
   }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1260px) {
+@media screen and (max-width: 650px) {
   .lead {
-  margin: 0 48px;
+    width: 100%;
+    margin-bottom: 64px;
   }
 }
