--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,14 +1,14 @@
 .page {
-  font-family: 'Inter';
+  padding: 28px 0 24px;
+  font-family: 'Inter', 'Arial', 'Helvetica', sans-serif;
   background: #2A2C2F;
-  margin: 0;
   overflow: hidden;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   }
 
-  @media screen and (min-width: 1280px) {
-    .page {
-      padding: 28px 48px 24px 48px;
-    }
+@media screen and (max-width: 425px) {
+  .page {
+    padding-top: 16px;
+  }
   }
