--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -3,35 +3,31 @@
 .photo-grid {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(284px, 1fr));
-    min-width: 90%;
+    width: calc(100% - 48px*2);
+    grid-gap: 14px;
+    max-width: 1184px;
+    margin: 0 auto 92px;
   }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 425px) {
     .photo-grid {
-      margin: 0 16px 64px;
+      margin-bottom: 64px;
       grid-gap: 12px;
+      width: calc(100% - 16px*2);
     }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1024px) {
+@media screen and (min-width: 425px) and (max-width: 768px) {
     .photo-grid {
-    margin: 0 48px 92px;
-    grid-gap: 14px;
+    margin-bottom: 88px;
+    grid-gap: 16px;
+    width: calc(100% - 24px*2);
      }
     }
-
-@media screen and (min-width: 1024px) and (max-width: 1280px) {
-  .photo-grid {
-  margin: 0 48px 92px;
-  grid-gap: 14px;
-   }
-  }
 
 @media screen and (min-width: 1280px) {
   .photo-grid {
   grid-gap: 16px;
-  width: 100%;
-  margin-bottom: 92px;
    }
   }
       
