--- a/blocks/place/__website/_link/place__website_link.css
+++ b/blocks/place/__website/_link/place__website_link.css
@@ -1,6 +1,11 @@
 .place__website_link {
-    font-size: 18px;
-    line-height: 1.22;
-    text-decoration-line: underline;
-    color: #FFFFFF;
+  font-size: 18px;
+  line-height: 1.22;
+  text-decoration-line: underline;
+  color: #FFFFFF;
+  }
+
+.place__website_link:hover {
+  opacity: 0.3;
+  transition: opacity 1s ease-out;
   }
