--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -8,21 +8,26 @@
     display: grid;
     width: 100%;
     justify-items: start;
-    grid-template-columns: repeat(auto-fill, minmax(288px, 1fr));
+    grid-template-columns: repeat(2, 1fr);
+    grid-column-gap: 32px;
+    grid-row-gap: 48px;
   }
 
+  @media screen and (max-width: 650px) {
+    .place {
+      grid-template-columns: 1fr;
+      grid-row-gap: 32px;
+      }
+  }
 
-  @media screen and (min-width: 460px) and (max-width: 1024px) {
+  @media screen and (min-width: 650px) and (max-width: 900px) {
   .place {
-    grid-row-gap: 48px;
     grid-column-gap: 28px;
     }
 }
 
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 1280px) {
      .place {
-      grid-template-columns: repeat(auto-fill, minmax(440px, 1fr));
-      grid-row-gap: 48px;
       grid-column-gap: 40px;
     }
 }
