--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,37 +1,25 @@
 .places {
     display: grid;
-    grid-template-rows: repeat (5, 1fr);
     grid-template-columns: 1fr;
     grid-row-gap: 80px;
+    width: calc(100% - 2*48px);
     max-width: 984px;
-    justify-items: center;
+    margin: 0 auto 92px;
   }
 
-@media screen and (max-width: 460px) {
+@media screen and (max-width: 650px) {
     .places { 
-      margin: 0;
-      grid-row-gap: 32px;
-      grid-template-columns: 1fr;
+      width: 100%;
+      grid-row-gap: 48px;
+      margin-bottom: 64px;
     }
 }
 
-@media screen and (min-width: 460px) and (max-width: 768px) {
+
+@media screen and (min-width: 650px) and (max-width: 900px) {
     .places { 
-      margin: 88px 24px;
+      width: calc(100% - 2*24px);
+      margin-bottom: 88px;
       grid-row-gap: 72px;
     }
 }
-
-@media screen and (min-width: 768px) and (max-width: 1024px) {
-    .places { 
-        margin: 88px 24px;
-        grid-row-gap: 72px;
-      }
-    }
-
-@media screen and (min-width: 1024px) {
-    .places {
-        grid-row-gap: 80px;
-        margin: 0 48px 92px 48px;
-      }
-    }
