--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -1,7 +1,8 @@
-.place__website_url-heading {
+.place__url-heading {
   
     font-size: 12px;
     line-height: 1;
     letter-spacing: 0.2em;
     color: #AAAAAA;
+    text-transform: uppercase;
   }
