--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,4 +1,4 @@
-@import url(./_lang_ru/header__lang-link_lang_eng.css);
+@import url(./_active/header__lang-link_active.css);
 
 .header__lang-link {
   width: auto;
@@ -9,6 +9,7 @@
   font-weight: normal;
   font-size: 24px;
   line-height: 1.17;
+  text-decoration: none;
 }
 
 .header__lang-link:hover {
