--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,4 +1,5 @@
 @import url(./__lang-link/header__lang-link.css);
+@import url(./__lang-link/_active/header__lang-link_active.css);
 @import url(./__logo/header__logo.css);
 
 .header {
