--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -24,7 +24,7 @@
 @media screen and (min-width: 705px) and (max-width: 900px) {
   .footer {
     width: calc(100% - 24px*2);
-    margin:  0 auto 24px;  
+    margin:  0 auto;  
 }
 }
 
@@ -32,6 +32,6 @@
   .footer {
     width: calc(100% - 48px*2);
     max-width: 1184px;
-    margin: 0 auto 48px; 
+    margin: 0 auto; 
 }
 }
